now with pictures

--- a/_posts/2017-10-20-Lombok.markdown
+++ b/_posts/2017-10-20-Lombok.markdown
@@ -16,39 +16,65 @@ So let us start with our plans for Lombok. We were going to stay in Sengigi for 
 
 Anyways, we departed from Gilli Trawangan around noon and set course for the closest harbour on Lombok. Luckily, this was not our stop, as this harbour was very deserted and a bit shady looking. Instead, we got taken south along the coast for half an hour to arrive at the sengigi harbour, where we could easily walk with our bags to the hostel. For our first night, we were going to sleep in a tiny room with double bed at Selasar hostel. Yes, we had now transitioned from honeymoon to the life as a married couple, and all of a sudden I had started to forget what private space felt like!
 
+![port at sengigi](https://lh3.googleusercontent.com/Bhgpwobzqib3H8C7ZWP6JJ2wppGnHDxg8ze53h3mz9WgIYOd3WXtVgnVDNXKmGvL1LZ0bf1oZs6oHXSZ5cegnX1PtwUjuno681PJ0Bon1bQgo40vsCTulzGDSx9IdkT683W5dd6yjQ)
+
 Having quickly installed ourselves at the hostel, we hired some scooters for 5 days, and we actually managed to take down the price from 50,000 Rupiah (ca 3.5 EUR) to 40,000 Rupiah (ca 2.5 EUR) per day. Shortly thereafter, we were driving to a local chicken fight, together with the salesman and another westerner living at the hostel. It was one of those things you only see in movies, and I am happy that it is over, because it was kind of brutal for the chickens. It was a huge crowd of people cheering on the animals, and they did everything they could to stress them up as much as possible, so that they would fight. They even equipped the chickens with blades at their feet, so that they would easily get wounded. We ended up watching one round of it, and then we refuelled our scooters (whose tanks had been left almost empty when we hired them) for 40,000 Rupiah (ca 2.5 EUR) per scooter. The salesman had also left without saying a word, so we did not know how we were supposed to get back 'home'. Luckily, one of his friends guided us back.
+
+![chicken fight](https://lh3.googleusercontent.com/g8bRLlIYJe5nJrWkz6YkGf-GWXcsMasL8XEl_wcaWAwO3qqFeQ-6Hk6iKBBzQor0BQOAC_LuR52nTkJ2dDJemvy3a57FMsAdGxhDFClJbxjoDLy5oW8tBY5Lt2tYz2HHN6JiQMzVLA)
 
 Later on, we drove around with our scooters in the surrounding area of Sengigi and checked out the surfing camp north of the hostel that we were going to surf at, along with a buddha temple south of Sengigi.
 
+![buddha temple](https://lh3.googleusercontent.com/EKuJi3DE_MNO_-eSSkz9JfXW1DBiQgwVZOMSW6NAOqiiuZAzFgRBA3cYh-Clt8zoIH89yieQLSPQdTjigHrLruJGH6loUQoErLrbYh9NlRP9tH_jj2UXLE1iQCNk9SbK_9t7Wh-R4A)
 
+![buddha temple 2](https://lh3.googleusercontent.com/iaW9dQ1rpmtPaakujuksd0I-PmRhI4eMxfPUmVgS0FPbJD0zuvjlLCbuYOLd61n6SiPDzrsE-ewVJdyQxj5o9nqj6VfkmLEq9yi2OTmhg4wsZ_ne5M_0IEq5hNwPV1ulH8gbCfUANA)
+
+![buddha temple 3](https://lh3.googleusercontent.com/-PoJ_ghSTowX1ToI_UD9fLzvEW7jC22t36gy1LW2BuLhM0mXFUlWZAT_k2gZjaORjRFr5QnUHdgK9n8k8MPx-QoGgeXnisg4OBRZy6kaTkNqkFlTvkjcDc5zd9PgANqrlWRYTU13cw)
 
 We finished the temple trip with going down to the closest beach and enjoying a sunset with dinner. Have I told you how romantic this trip got?
 
+![romantic sunset](https://lh3.googleusercontent.com/EYw5B0hsM9qlbcGjCAOfqdVQm0w5v6T4YlVRZSeXD9jedGj6jfxYwcNs7OR6Aew2eSTytsPf0TK2_FgzgND6EYYr9wEHw25VD2eI0zrWAlDUKKJqbTZhjVYzG8VlP9skdYckcHeB3Q)
 
+Later, we went back to the city, had a couple of beers and then went to sleep on the double bed in the cell-sized hostel room. Yes, it was a bit too little private room and we started to get a little bit irritated with each other by this point. Oh, how happy I was that we were only going to stay here for one night. I think the feeling was mutual. Anyways, the beers were pretty nice!
 
-Later, we went back to the city, had a couple of beers and then went to sleep on the double bed in the cell-sized hostel room. Yes, it was a bit too little private room and we started to get a little bit irritated with each other by this point. Oh, how happy I was that we were only going to stay here for one night. I think the feeling was mutual!
-
-
+![enjoying beers](https://lh3.googleusercontent.com/OqQ9QpglkUL1omZUCSC9d6FAtx0xsFAQct4bhCstbyb_Q9z1v9s9ziBwYfOmuHL10CLt_rNP49vi489EhEpa3-DnJS4g3cJQxlgK-rMwEZdOyHDmR1uzlSVzYkRJayGX-sE1SqVXUQ)
 
 Next day, we went up early to surf in Sengigi. It cost 150,000 Rupiah (ca 10 EUR) to rent a board and 250,000 (ca 16 EUR) if you rented a board and took surfing lessons. It was definitely not worth it to surf here, as the waves were very small, the bottom was a reef, and surfable waves came very sporadically. Surfing here was a big disappointment, and I started to look back on Algarve surfing (Portugal) with a sentimental awe. Markus was not impressed either, and did not want to surf after this.
 
 Not everything was bad, though, as we had a quite nice talk with our surf camp's owner (actually the dad; this was a family business) who seemed wise and thoughtful. He talked about the history of Lombok, and how the locals were afraid of white people when he was young, as the dutch had apparently been quite rough during the colonial period. This view had changed dramatically over his lifetime, as western tourists nowadays contribute alot to the island's economy. He had also adopted a baby monkey that had been abandoned by his mom, but wanted to get rid of it soon, as it created a mess in his house and could carry diseases (even though he bathed it every day). He talked about the problems with plastics and how he put pressure on everyone he saw to pick up their trash and put it where it should be. He had even had talks with the island's governor about this issue. His son had apparently won a surfing competition as well and wanted to become a professional, but he was strict about his children finishing school before they could pursue a career. Lastly, he gave us a tip to ride our scooters north to a hill where we could see monkeys and enjoy a nice view of the ocean. He was a very reasonable man, and it seemed as though he wanted to be friendly for the sake of friendliness and good conversation; not because of our money. This talk was definitely one of the highlights of this trip.
 
-
+![monkey talk](https://lh3.googleusercontent.com/HMMgeUE4tTZQGBc5dguYO5GkrieNIWnxb0_WA_EhNP1nQ5em4otPXD5rqTJD0WgZwGa946BS7Y2qx0vKf-x77G777djHwZRZuq28ri5tRvoGOvukbfsvA30n3jACaMxHRI7ZDNwYvw)
 
 Having finished the talk, we quickly checked out of the hostel, checked in to our new hotel (Sengigi Cottages) and rode north to the spot he recommended us to visit. It was, indeed, a nice spot, and we managed to see a couple of monkeys whilst riding further north of this hill.
 
+This was our hotel:
 
+![our hotel](https://lh3.googleusercontent.com/oBfa1O7Uq6bSHf6YHzi2dLu7srLfYWEpVPzVpy-KViuJB6Zj4tORMxjwxQG9Q-KTAqduu3eIDes1XiKPw2dATuiQZCqhknwd_pedgD-WMGCU3P3RTE69vFP_3j9ces4Sy7kMdDwfPw)
+
+![our hotel 2](https://lh3.googleusercontent.com/4_RtZZqiiIsRXYOgQG1xV4YzyOGRKAx7nHBknQjwgGBZDvkD9z-P5R1_mo5Z7NFp4GBilfZc8lbWTTh2BZlW8cYUCvDTPdVCf-zGN03TZiRa0n0li5zrxFq9NN7bIcqY7FX2l2_ptA)
+
+And this was the nice spot (see more in the [Google photos album](https://photos.app.goo.gl/F7u4H9Nr56Iimmzh1)):
+
+![nice view spot](https://lh3.googleusercontent.com/t5F-T3vXRbpaVtiFiD_ze8CZ_0Vo57-HmRw_FOF1gWMT8dCd5fbEUaTDnr782zOyyLMTCeYhD7qBOpcnezkPtYb71cKQXnSv5COfNVj9FpBvRqTPyC6gVt_VtTB_BX1nSdh8-wh9Cw)
 
 A few minutes afterwards, we stopped by a local streetfood fish restaurant (it was basically a hut by the road) to eat some really locally cooked, freshly fished, fish. It was the best dish we had during this trip, and I highly recommend you to try this out if you decide to visit Sengigi.
 
+![local street food](https://lh3.googleusercontent.com/qOSis-cOD6DckJbUdCwhyndLgrCwoVlAiJwsneUZNSycC3MCAXoFCk8tAKru3zqoXdHy8OI42iKiwfCOp3IhUrANn5ztc_-Ljozq5FLQg-Uug6INyDfY6uxHZvJBRgdbjgp4ivDZWg)
 
+![local fish](https://lh3.googleusercontent.com/BpY6NgZwvtbTT9_w1DE_uFmoQaauZMYwUXz0d0uC9Cl9Q3a7-3FcQ2Nh7ktOzwGaYRiRi_Wh7fFTEWEy5lPFkAEV9MZEIJTGvrfxsxQaWwMiy2nJ8tPkA8_bCk_o6PlcwDoYEybJTw)
 
 We rode further north along the coastline to see many nice beaches, and eventually the road led us further away from the coast to nice rice fields. We kept on riding until we came to a city with a big football field in the center. We rode a little bit further, but as the sun was starting to set, we turned around to get back to the hotel before it got dark. It was a one hour trip back.
 
+![rice fields](https://lh3.googleusercontent.com/Id1KMy0vL_KmIp27i6FrAzDPEXhMw26IVocjs9CnSi33Fn3ykC9f3Iq_baRxvgClwyFxN_hD-jHDxN_9ah42KcHCOYYUp755Jo1QLamkiF9l6WHrcW-1Nvkap7WVy4m_LRXfWWFbDA)
+
+![football field](https://lh3.googleusercontent.com/0MlTMq1K0LWpmFPDYMfYuZQbxFPgIdRGQbYGnH9eQvZKo5E7eNt8lupHrgVAmzU3NtnY0reYBDUnj4xB6qzL0egl4l8b4pmagR3d-MjWZ3te-W6dkvouttLzI0bvD_gIRBRmdwvgGQ)
+
 It was very nice to get back to this nice hotel, and we ate dinner at a quite good local place, where the average dish cost 25,000 Rupiah (ca, 1.7 EUR). I got Nasi goreng and really good fried bananas. A really good restaurant if you are on a budget!
 
+![local restaurant](https://lh3.googleusercontent.com/WIKcfLOIj6wFq1eMZSfEgCY4rsaCJO3o8O-8KnEpc6Zhl6qtxy-bN6pXHUZ_N43yil4EdqQoxC6cdrQnR48D9eOwK7ZyTVpdUc3xX7bf64sGfwaFBhtWnwhmnVuc1H4wfHCHvdjtew)
+
 Next day, we rode our scooters to Kuta, as we had decided Sengigi was too boring to stay in for the entire week. A guy from the hotel staff, Didit, told us to not ride our scooters in Kuta during night, as there had been incidents where locals pulled over westerners to extract money from them. We took notice of his tip, and I had also heard about police stopping westerners just to get money, which made me extra aware.
+
+![scooter trip](https://lh3.googleusercontent.com/40WptgASvreCHCBl_y-cXA7lIfIDn4ybDlpQ22j6YvNybW6inP0k_Peia2DamPoBV7lz6uJawdAMIwtPogBegmcNbNqIYBGphQUHMqjmE3GBBndS5GiIlq-qSV5wzWlUtn76cwVpzA)
 
 It was a 2 hour trip to get to Kuta, and on the way we saw a group of cops starting their scooters when we drove past them. Both me and Markus got quite scared about this, but luckily nothing happened. The road was also very good to drive on, and it was quite nice to only have to focus on the driving and not socialize for a couple of hours.
 
@@ -56,29 +82,73 @@ Eventually, we arrived in Kuta, and as we had not prepared a hostel room before 
 
 We saved 20,000 Rupiah (ca 1.3 EUR) and got both our conditions. However, it turns out the bathroom had no sink or tapwater - only a shower and a toilet with a loose seat. The water from the shower smelled really bad, and the toilet was used as a table for the soap to the shower. The beds had no sheets and were very uncomfortable. The door to the room was not rigid and as such had holes in it, which meant mosquitoes and insects could get in. We got free breakfast and saved 20,000 Rupiah, though!
 
-We now went to Tanjung Aan, which we had heard was the best beach on Lombok. It was cloudy when we got here, and it was low tide, but we could definitely see its potential. We walked around, lied down on some beach beds and bought oreo cookies and freshly squeezed juice (try the banana juice; it is a local specialty). Then we headed to Gurupuk Bay, where I was going to surf the next day. On the way, a local surfing guy, Bass, asked us if we were going to surf next day. Having said yes, he escorted us to his place and talked about the trip he offered. For 200,000 Rupiah (ca 13 EUR), I would get to rent a board and get escorted by boat to the waves (they could only be accessed by boat). If both of us joined and got an instructor, we would only have to pay 450,000 Rupiah (ca 30 EUR) in total. He was closely connected to the Swedish owned Gurupuk Surf Camp, which made it all seem legit as well. We had to get up early though - I wanted to get there around 7-8 am. Markus had to think about whether or not he wanted to go.
+![bad room](https://lh3.googleusercontent.com/hxW2S4zKiirsiUMm4lhseO4LUn-Fod7sQh6IHtEIZzO5m59RmcXKIbwgbpAxxAI3FMrhFr09xjeMQrbJW_i74llQoBjAm58Lrsnwq8xl1DR51qkSc8_BsR53_D5Ps6o-A0lCJapHJA)
+
+![bad room 2](https://lh3.googleusercontent.com/3y1KyLq-sYofNjmzpijdBz_dJEoFgvCORtoJ-fI0GYBs33G8Bf68tcqZ1cNSZox_hCoIKUQAvee9H5pSsWo15sMfvbkGP2KQIiBuWjjQQ_CagsU2Gu6zDZs30Pwhl2uMVoom8ZxZmA)
+
+![bad room 3](https://lh3.googleusercontent.com/6Z1HzjKCoO-HzAIyCOElbTLZiFLHhJq83tg37Mbr9N6VjL8-xX-Xx-1p1bDwlr9FAB18oJbzEMrwi_h6VQhfpBe-EneV7SjcNXJUkjxsFuiLkvLRlpcnoF2kBVgHiVt38_JRJg8zQg)
+
+We now went to Tanjung Aan, which we had heard was the best beach on Lombok. It was cloudy when we got here, and it was low tide, but we could definitely see its potential. We walked around, lied down on some beach beds and bought oreo cookies and freshly squeezed juice (try the banana juice; it is a local specialty).
+
+![tanjung aan](https://lh3.googleusercontent.com/_s7i08BC5GoEn0Tdng8B-X18P2R8NpCMtnI3_OgruJxzVRPrMMO4U0HFpqFLRaub0x9Ulw2goxD1swFZPg5o_1w9PYW_1wl_-1GfC4TVPgpF6RYFWmKDX6Fr8b5fUDsvw_SVoJxj6w)
+
+Then we headed to Gurupuk Bay, where I was going to surf the next day. On the way, a local surfing guy, Bass, asked us if we were going to surf next day. Having said yes, he escorted us to his place and talked about the trip he offered. For 200,000 Rupiah (ca 13 EUR), I would get to rent a board and get escorted by boat to the waves (they could only be accessed by boat). If both of us joined and got an instructor, we would only have to pay 450,000 Rupiah (ca 30 EUR) in total. He was closely connected to the Swedish owned Gurupuk Surf Camp, which made it all seem legit as well. We had to get up early though - I wanted to get there around 7-8 am. Markus had to think about whether or not he wanted to go.
+
+![gurupuk surf camp](https://lh3.googleusercontent.com/HxYzeLCXsTWbMhjWF62pQMWBGlkBqOezeTQBMiKBV4czhDMiWQIq4kcNCe5Tw2IXmxiAyb0V20DTZ-ECZ-Z0NVw2z6EXDlV2_vOsszt0Y1uKBP8fNyWSrSZNAS-Hv-G-jv0Ai9ACBA)
+
+![surf teacher](https://lh3.googleusercontent.com/yzvrIRoCRUvQU1SpQh4zCEsVOUPdiFYxwRevYVHLrUwobeuUj5hPZwOcl04tyJhZ29wW4sxtTlcuE_AhavIgDGRRC1Hemtv7p3oYevj6ZDbaVFnTNDphpl2tZ-1TfhH8d703302pHg)
 
 We went back to Kuta, enjoyed some food and drinks and I bought breakfast for next day. I skipped brushing my teeth and slept with the clothes I had been wearing all day. Luckily, I had brought with me some ear plugs, which became really handy because of the loud motorbikes and parties right outside our room. Mosquitoes were a big problem, and I squished one that had a completely brown goo inside of it. I had read earlier that day about malaria problems in Kuta, but there was nothing I could do. I got very little sleep and woke up 5 am with 20-30 mosquitoe bites. I went to the surf camp alone on a 20 minute scooter ride, and on the way I thought about those 20,000 Rupiah we had saved - and I had not even gotten my free breakfast...
 
 I got to the surf camp before 7 am, got a surf board with a big glue spot (repair work) on it. The surf guy wanted to chart me up to 250,000 Rupiah, but I stood my ground. Then he took me to the boat and told me I did not get the fast one, as my friend did not show up. I was put down to the slow boat with his uncle that did not know a word of English, and the surf guy told me I should probably be back after 1 1/2 hours (I wanted around 2 1/2 hours or more) and by that time I felt quite tricked. I got a ride out to the waves where 30 others were already surfing. I got into the water and 5 minutes later I could neither see the boat nor the uncle. It was in this moment I realized that the uncle very well could have driven back with all my stuff, stolen my scooter and leaving me in the water with no way to contact anyone or get anywhere. I kept on riding the waves, though, as ignorance is bliss. That, and the fact that I really wanted to surf as long as possible, because this was the little time I would get to surf on Lombok...
 
+![ssurf boat](https://lh3.googleusercontent.com/8uJ0fSL8sMIXPLwCmnMABAUhMBkBCpzN4a8MT52AbJla8KaJUVLvCJ3WmEe7KlxBFLD38vYoJ-BTzI-p8L7NHUdYh_5FFlRGGM89hmtZePbcz6xgLIFq5gWJlcVhBn4qqliSsgDNUQ)
+
 The waves were very good (ca 2-3 meter high), and they came quite often. However, they were above my level, and I really wish I had had a surfing instructor there, because I did not manage to catch a single green wave (only whites) throughout the whole session. The surfing spot also required you to paddle the whole time, as there was nowhere to stand. As I had very little experience with this kind of surfing spot, I quickly drifted into the shore and wasted most of my energy trying to beat the waves trying to get out again. I got nowhere, and it was only after a while, when someone told the somewhat panicked me to go around the waves, that I managed to get back out again. It was a very tiresome session, and by the end of it, I drifted in again only to see a couple of snake eyes stare at me from half a meter's distance. It was time to get the hell out of here.
 
-Luckily, the uncle had not left, and we drove back to the surf camp. I was happy to have done the surfing, but also happy to be done with it, as I was exhausted and a bit shaken. I did not feel that safe on this island.
+Luckily, the uncle had not left, and we drove back to the surf camp. I was happy to have done the surfing, but also happy to be done with it, as I was exhausted and a bit shaken. I did not feel that safe on this island. Anyways, I was quite happy to get some rest now.
+
+![happy to surf](https://lh3.googleusercontent.com/41k5RdyYreg_nJ_itOcqe3RZqUzY2JeHOjNkkUFbnESRguIJT5e8pCEZiWufV9QAeBkf8cTmAajsiqo9ecBDvQUUE9nSlj4DCFn1DaBh_4lRJ4EU_RCkqUpdeXpEp7zmmD8xghMdqg)
 
 Later, I met up with Markus on Seger beach. Apparently, I had gotten internet connection and managed to contact him regarding our meeting spot. We paid a 10,000 Rupiah (ca 0.3 EUR) entrance fee and saw beaches, cows and salesmen/children. We also met a nice old dutch lady, Anna. We talked with her for quite some time and walked to Novotel beach where we could swim. We had now transitioned from a honeymoon couple to a family, with Anna as our mom. One really annoying thing we talked about was the professional child salesmen. They were very annoying, and it was sad to see such young children only viewing you as a pile of money. Needless to say, it was quite nice to get back on the scooters to Sengigi a couple of hours later.
 
+![nice beach](https://lh3.googleusercontent.com/H1cmaQaHRotq2Y9jUXtGrV07XKSUorhuRz-Ztndt_I8J9EPgCxV6fZp28N3bExne43wQx00vhrxxfwS01YZ9NQUv4LbM-L1M8kJarzS3yF2W5CINRj6FR01VEADTIZlAZsG2SpObvQ)
+
+![All united](https://lh3.googleusercontent.com/FK5BZY_Bo-lLaRnhCZwLDU15tABf6Q-1Z8ql849oosAFqftrP3JiJIdmcWdNN9FrJeI2BoJ-7Ca_d8-oHqdFNtCQQ0CmUr2ce1lqu9nhGS6XyNGNW67v3_xazkWrQyAmxdKL16FlYA)
+
 In fact, it was very nice, as we got a whole body massage for 80,000 Rupiah per person (ca 5 EUR) - one of the nicest massage I have gotten as well.
+
+![massage](https://lh3.googleusercontent.com/wVlv2JAO3eGdOcrjKOnnGJv9DFInOrATQi2XzXdZfoNXURKI8rdbudcZiBPwUa36xVKNLklSTomdpYJCLvAR7drNkbZfxGnvXqTO6fxDUne6ck8dsXvX_rc9C-aTHButnrrcfmFoeA)
 
 Next day, we took a whole day taxi drive to Tete Batu - a village in the middle of Lombok with rice fields, water falls and a monkey forest, according to internet. We had booked a local tour guide for 250,000 Rupiah (ca 16 EUR), but cancelled because our taxi driver, that we had payed 500,000 Rupiah (ca 35 EUR) for the entire day, could guide us around instead. The driver seemed really nice at first, and he promised us to get us to a local stick fight after Tete Batu. You should not trust people on Lombok, though, as we later found out.
 
 When we got to Tete Batu, it was raining too much, so we decided to stop by a bed & breakfast called Brigadoon. Apparently, this place had not even opened for its first customers yet, and it was an old scottish guy and Lombok lady's home. We ended up talking with them for about an hour, and the scottish guy had travelled around in Asia for most of his life. He had even been in Papua new Guinea, and had many great stories to tell. I was very happy to get in touch with these guys, and managed to get the guy's email address. Hopefully I can write down some of his travel stories here in the future - I would love to get some more information about these exotic places.
 
+![old couple](https://lh3.googleusercontent.com/cmDeMS_dpSabq4scLdhwF5NtmCtHhWzv4t8rTchj5dRntyXMRmJrF6vF6iHBp-5c2I5qtB_cmvvoZMycagi6FjwCSoKKrU1ycBeQkujYqe7_FQlc95bxaZx2SNdXDIfblehqVSVQPA)
+
 Having said goodbye to this couple, we went to the rice village, which for some reason felt like a tropical version of Småland - a region of Sweden where I spent part of my summers as a kid. It was a very nice place, and we got to see Mahogany trees, avocado trees, coconut trees, along with the rice fields. The down part was that we had to tip the local guy 50,000 Rupiah (ca 3.5 EUR) who only pointed at things and said a few words about them.
+
+![rice fields](https://lh3.googleusercontent.com/s-ku-ePHGBIf80cOgjXhJLM2CEyeJQo9k-HJjQdcZMZzGP9qQWZlMEa9jMzgNGBz-hz0OBsi2Cr4V5MCT7Fm-9VrwDS3l881Y6gUZtZgY_S6dRC2m73lsao-NaQsw441tlgbP6Q44g)
+
+![pointing man](https://lh3.googleusercontent.com/DEcprSSp6utfpZhrFd8IDPQh_BXob6EaTY3qThNFt0p6cHjJapPQ8nfdo1W6e2ABb30Cn5dCfXZBmsidWa_sjRbT4-7nAbPzAicz8hCh02TlxJq_XcMVE16I_u0EGFhEi1PoC0GUFQ)
 
 Afterwards, we went to a waterfall that the driver knew of. He really wanted something to eat, and started to get quite angry when he did not get his way. The 'waterfall' was located in a hot spring, and it was only some water poruing down along a samll cliff. He found a restaurant here, and we payed for his food without a thank you from his side. Afterwards, he got quite happy, and we drove back to Tete Batu in order to look at the monkey forest, old village and waterfall that was marketed on internet. We could not find any of these, and honestly think one of the marketed things was a hotel. We also had the feeling our driver said none of the things existed in order to get back as soon as possible.
 
+![waterfall...](https://lh3.googleusercontent.com/jP1zPE5JGTIpOA_SDQbusx_OVm6yaGl2FiY_ZBPLV4CEdAjRaseH4s-XbhLB5ykpcCAzu4jHdoQf1uHol3hMj9ZkSR9RasXv29GBGG5gUGL0fQKxoCFdCIv3F9sJoczssU3eb7EDKQ)
+
+![food](https://lh3.googleusercontent.com/MwoUJYLo9ZuhwhqYxWo0SYBDFKCaBVm8GyAnpHh2yayaOtQz-vl6vhqm1EOjwqjpKcUGsRH1t1U-BngPj3Pzi4IX1AGVk_3ArO5jCYz4uixMLBuDnMitHicif_qWS6-N9e_XkqsXBA)
+
+This was the supposed old village (actually a hotel):
+
+![old village](https://lh3.googleusercontent.com/yk9-XQUPSTAA5L--7XqYPPIGbmkYzRNziKUjeMIAjYnxXJ_Pcoet-Qo4_IOSKp6h1VnQ2y50nQsFbCgURzX3preCNUHe2aeLE0QTkDpHwRK4O-cycsELiT95ZwsodWllNV7ksyoikA)
+
 Disappointed, we made our way to the promised stick fight. There was no stick fight. Instead, we went to the driver's home and saw some of the stick fight equipment and fought a little bit unserious with it. It was a really nice part of the trip, though, as his home village had alot of locals (kids and adults) who appeared to never have seen a westerner before. None of them knew a word of English, and we quickly became a famous attraction. His parents gave us some coffee, and it felt nice until he wanted us to bet on his brother and him having a stick fight. If not, I should fight his brother. When I said no to both options, he got mad and proposed that we should tip at least 50,000 Rupiah to his parents for the coffee and effort. This guy only wanted to chart us up and looked at us as piles of money - as most people we had met on this island. He also was mad at us on the entire journey back home for not having followed his will of paying him and his family money. As another trick up his sleeve, he made us pay 150,000 Rupiah (ca 9 EUR) for the fuel, even though we had agreed that our initial price of 500,000 Rupiah would pay for the fuel as well. Oh, he was mad at us.
+
+![stick fight](https://lh3.googleusercontent.com/W7M5osAogGDDAfj4ECsuQ3a8WeDyMnEQnBIckN9KdL7RQpoXFD2C39CyGCRQLjfYrsCANzm6zu69frN9FXeHOcmHBC1-oS0SY1OCpi6OP1ZisjYLB5rbohaSs3UIYNzTOSVwvdHVwA)
+
+![nice kids](https://lh3.googleusercontent.com/pQOmOMM3cVhn5x6rZpTdw--xUE5ZkCvcVa6TRxxB4aIeMCl4H1zA0lnWTeh7YlfE0Tw39_8rQqWyZxaDx1zTpQJhvGuQSqZ7lP2RnvFesQ5Qk5AoWj_J34I6UOexs0UesjjsLE8eXQ)
+
+![nice family](https://lh3.googleusercontent.com/DFECmjzNfzUXo9swPvMJLcNzE2e0S8WQh-VudnFjKY9JT-QOb-H2TJj9_hLkPxWNWP4LTrkT-By3ll5VK8AbB_N8PSRxCnII6M_Er7NtzWGbd4SlRG3vPtB-ZABlfhNwLU_1QGY2MQ)
 
 Sitting in the car, Markus told me that a couple of friends (a guy and his girlfriend) that we were going to meet up with later for drinks in Sengigi had to cancel their plan. Apparently they had gone to the very deserted harbour north of Sengigi I wrote about earlier. They had decided to take a drink on the only restaurant there whilst waiting for the bus. She finished her whole drink, whereas he only finished half of his. After a little while they lost their sense of touch, and could not feel anything, even as they pinched each other. Five minutes later she was unconscious and he called a taxi in panic. He took her on his shoulders, along with the 3 bags they had with them, and immediately went to the hotel they were going to stay at.
 
@@ -92,4 +162,6 @@ Next day, we went back to Singapore. We took a taxi with taximeter to Lombok Air
 
 Two hours later, after a total of 6 hours of transport, we were finally back in Singapore. I was extremely happy to be back and was ready to kiss the ground, because Singapore feels extremely safe in comparison to Lombok. It felt great to start having real interactions with people again; not like on Lombok, where friendliness was almost solely a tool to extract more money out of you. I had also been looking forward to some private space for a while, and this symbolized the start of that! Nevertheless, I am happy to have done this trip, as it gave me alot of new experiences, and taught me alot about people.
 
-I have now written for very long, and am not in the mood to put up pictures. A future update will of course involve pictures!
+![back in singapore](https://lh3.googleusercontent.com/12AEHWtBHOp0iq5uGL0bUC-K-fGKUVdtgRFS6eG3wqDIdo-n0G_bPUJ6lrVkMpCjJO0wgNOTyTdzC5CnuYpDedP20vielhcdCFxUBG-aLxV7gd4Aa17Xto8lErmQJOVGS0jlpLQv4A)
+
+![back in singapore 2](https://lh3.googleusercontent.com/QwNxptqRNhSJ8KabYluYqk-x2OYe-939rOu_5TJYIzpMu28UQt3AekjmfOs0kTyak8cUUWKbfFYV8_yiIAEhMUZtuuc5aKV6rtRx1Z9WHQGKDK6Oue6nBFw9-e31XZg9m5Uv3Js32g)
