--- a/_posts/2017-11-22-Bangkok.markdown
+++ b/_posts/2017-11-22-Bangkok.markdown
@@ -111,6 +111,8 @@ Next, we went back to our hostel, geared up a few levels and took a grab to Abov
 
 ![skybar 3](https://lh3.googleusercontent.com/2c-2yljRQchCLkkb76YLomTFOUIV87RQ92SlLml5vpw-oZhgQPY8hUldjy9fWH2DTY7pPEQL1FM9JIIefYoifleaGxS7v6-uYoEMneMMwnxOnNpAi24PthELMDzodScMMrYbpuqtOw)
 
+![skybar 4](https://lh3.googleusercontent.com/-W6HRaijkCJR4Cr41R_4uJwJDyJacq4_ZZfz-YISVt8gE9_LfG_b79T8F5KifX1hW0gqWxLH27kBvbH4PC0MKLRLzfhJrYTvwCHJWjfyWVUIry_Kcr191EbuJz5LXwy6BYEXIr-scg)
+
 Yes, we definitely fit in here...
 
 ![team retarded](https://lh3.googleusercontent.com/2Dxlt0E1xgEQBWPyd_GdiCY3jEyK_K5c2kQsmcq9yvttYqg9khPa6LZSJCY-d76ES3neC_eh99IJkAwWod6nTFwz6Ai33ux-dCeFmNk-hpDO4Y4NXZ1v8ZhQlkbv4fTaFSKaT9wVcw)
