--- a/_posts/2017-11-22-Bangkok.markdown
+++ b/_posts/2017-11-22-Bangkok.markdown
@@ -16,6 +16,7 @@ As always, here are some tips for the trip:
 * Avoid Tuk-Tuks as much as you can. Apparently, if you take a Tuk-Tuk they will most of the time take you to shops and places you do not want to visit, in order to get you to buy stuff there. We did not make this mistake, but a guy we spoke to had told the Tuk-Tuk driver exactly which route he should take, but still got tricked into this.
 * The grand palace requires you to wear something that covers your knees and shoulders. Wearing a shawl (svenska: sjal) is not enough. Luckily, they sell comfortable thai pants for 100 Baht (ca 3 EUR) just outside, so if you can accept this cost, you do not need to bring any long-sleeved clothes with you.
 * If you like food, you should definitely go to Khlong Lat Mayom floating market.
+* You do not need more than 2-3 days to explore the city as a tourist. We felt like we had done most of the things the city had to offer tourists when we left. There are probably many more things to do than what we felt there was, but nevertheless, 3 days felt like a good amount of time to stay here for.
 
 Three weeks ago, I went to Bangkok together with TTTT (The Tuk-Tuk Troup), and it was our last trip together as exchange students. Just for clarification, TTTT consists of me (aka Amok Fish), Sara (aka Coconut Lady), Lukas (Tomb Raider) and Eric (Chicken Nuggets), and it is the same nice group of people that I went to Angkor Wat with. And this travel group have made me realize how a great group of people can change your experience during your travels.
 
