--- a/_posts/2017-11-22-Bangkok.markdown
+++ b/_posts/2017-11-22-Bangkok.markdown
@@ -18,6 +18,8 @@ As always, here are some tips for the trip:
 * If you like food, you should definitely go to Khlong Lat Mayom floating market.
 * You do not need more than 2-3 days to explore the city as a tourist. We felt like we had done most of the things the city had to offer tourists when we left. There are probably many more things to do than what we felt there was, but nevertheless, 3 days felt like a good amount of time to stay here for.
 
+For our google photos album for the trip, please click [here](https://photos.app.goo.gl/hhvwJG6aJZ3p7Asn1)!
+
 Three weeks ago, I went to Bangkok together with TTTT (The Tuk-Tuk Troup), and it was our last trip together as exchange students. Just for clarification, TTTT consists of me (aka Amok Fish), Sara (aka Coconut Lady), Lukas (Tomb Raider) and Eric (Chicken Nuggets), and it is the same nice group of people that I went to Angkor Wat with. And this travel group have made me realize how a great group of people can change your experience during your travels.
 
 Anyways, we landed at Suvarnabhumi Airport around 16.30, and it lies more than an hour away from the city center, but is oddly enough still surrounded by the city (yes, Bangkok is HUGE). We quickly booked a grab to our hostel, The Onion, which lies very close to the river, in the middle of the city (if the city can even be said to have a middle), and just next to the largest flower market in the world, Pak Klong Talad. I highly recommend this hostel, as its personnel is very nice, it has big and comfortable beds, it has a nice breakfast included, it is very fresh, it has quite big safety lockers, and it is very centrally located. If you are out in good time, you can stay here for around S$13 (ca 9 EUR) per person and night.
